update jdt.core to S4_16_0_M1
+ try to integrate our changes in CodeStream with the big refactoring
  - instead of adding "recordTypeBinding()" we now integrate with
    pushTypeBinding()